<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/mainTitle"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="341dp"
        android:layout_height="58dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:gravity="start"
        android:lines="5"
        android:text="@string/appDescription"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="353dp"
        android:layout_height="58dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="60dp"
        android:gravity="start"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/addZutat"
            android:inputType="textPersonName" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="#08F412"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_input_add" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="353dp"
        android:layout_height="58dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="100dp"
        android:gravity="start"
        android:orientation="horizontal"
        android:scrollbarThumbHorizontal="@null"
        android:scrollbarThumbVertical="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="270dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/addSchlagwort"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="375dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="#08F412"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_input_add" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:onClick="search"
        android:text="@string/search"
        app:backgroundTint="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1" />

</androidx.constraintlayout.widget.ConstraintLayout>